{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "XRRightController",
            "id": "5bc201b4-580e-4035-8cf0-3e7cfc830012",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "34548d79-4d48-47e6-b9d1-a5c2f001e595",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "b878e206-8dbb-4894-b04c-065d009ede36",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "7073aae9-de9a-4e12-ab93-6d27d6894f5b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "fdfbbd6a-7a3c-4e3e-a597-470a5aba8efd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripButton",
                    "type": "Button",
                    "id": "e7d314e1-ae32-4483-836e-9899e1c0f4b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "668c2a4f-7700-4c90-9b37-726d44b76303",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d053554-a0c2-45ea-9519-8da962fedd38",
                    "path": "<XRController>{RightHand}/pointerPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20e950f2-6356-46e8-bbac-73ef4ab7cc99",
                    "path": "<XRController>{RightHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1e1207d-5095-438a-b851-8db136ecda55",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36afef02-c382-40c9-95da-3efa4dced914",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7668446c-db9a-4cc6-ac55-84123d394f1a",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b19b4b20-dc8d-4bd1-97cf-56386680fc74",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRLeftController",
            "id": "f9f93a63-2e70-4a90-80af-a4c4bd340199",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "d62bc034-2099-4ab2-a862-b72b0017e695",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "4f3d1586-e529-4f1c-b3fa-4b95e3bbe332",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "ea166de0-0d42-4340-b461-bcbbff6f35ca",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "07696cf9-1194-448b-9bb7-4b31b892ce0d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "88d4ac43-88fc-4c59-9cf3-f9b5b331b870",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripButton",
                    "type": "Button",
                    "id": "cd842a92-9623-409f-9b03-c2576dc38a13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "97d3859b-4ca8-4171-845a-0ecaf11f2711",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33863f19-3347-4749-a6e5-450518aab7ab",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22ed47eb-8411-4877-92b2-168ea6f12b64",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9353a316-19bd-4d88-adec-2dd091e625e5",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17a06f64-cd8c-4c41-9346-5b482685b4f5",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ad08d3a-5d74-410b-8afb-33d4230890ad",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e46bdca5-0df0-44ba-ba29-99bb05601463",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a602068-4afe-4fc6-9a0b-1a9ee5096570",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}